tests/requests/snapshots/can_delete@measure_request.snap
---
source: tests/requests/measure.rs
expression: "(all_measures, measures)"
---
(
    [
        Measure {
            id: 1,
            name: "grams",
            grams: 1.0,
            icon: None,
        },
    ],
    [],
)
