tests/requests/snapshots/can_list@measure_request.snap
---
source: tests/requests/measure.rs
expression: "(empty_measures, measures)"
---
(
    [],
    [
        Measure {
            id: 1,
            name: "grams",
            grams: 1.0,
            icon: None,
        },
    ],
)
