tests/requests/snapshots/can_update@measure_request.snap
---
source: tests/requests/measure.rs
expression: "(measure, updated_measure)"
---
(
    Measure {
        id: 1,
        name: "grams",
        grams: 3.0,
        icon: None,
    },
    Measure {
        id: 1,
        name: "grams",
        grams: 3.0,
        icon: None,
    },
)
